--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,30 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: my_database_development
+#   pool: 5
+#   # username: postgres
+#   # password:
+#   timeout: 5000
+
+# test:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: my_database_test
+#   pool: 5
+#   # username: postgres
+#   # password:
+#   timeout: 5000
+
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: my_database_production
+#   pool: 5
+#   # username: postgres
+#   # password:
+#   timeout: 5000
